the terms of the GNU Free Documentation License, Version 1.3 or any later
version published by the Free Software Foundation; with no Invariant Sections,
no Front-Cover Texts, and no Back-Cover Texts. A copy of the license is included
in the sources of this package and additionally can be obtained from Internet
<https://www.gnu.org/licenses>.

* [2017-11-18] release 1.3.5 of LibTMCG
* [2017-11-17] ASTC: fixes a bad mpz initialization in DSS::Sign()
* [2017-11-17] VTMF: fixes a memory leak found by valgrind
* [2017-11-16] RFC4880: fixes some memory leaks found by valgrind
* [2017-11-16] RFC4880: fixes memory leak of mpi's from dummy container
* [2017-11-16] RFC4880: added check for correct tag format of MDC packet
* [2017-11-09] release 1.3.4 of LibTMCG
* [2017-11-08] RFC4880: added features subpacket for MDC support
* [2017-11-08] RFC4880: added experimental key type 107 to keep track of x_rvss->QUAL 
* [2017-10-31] removed DKG tools (now contained in a separated package DKGPG)
* [2017-10-29] release 1.3.3 of LibTMCG
* [2017-10-22] DKG-tools: added dkg-keyinfo to show some DSS key parameters
* [2017-10-20] ASTC: added proactive security: refresh of key shares
* [2017-10-17] ZVSS: added index conversion in Share()
* [2017-10-04] DKG-tools: changed default TCP/IP port range start to 55000
* [2017-10-01] Bugfix: VTMF checking in dkg-decrypt due to FIPS domain parameters
* [2017-10-01] Bugfix: type casting inside snprintf() of hash function g()
* [2017-09-05] DKG-tools: fixes upper limit of t-resilience by option "-t"
* [2017-09-03] release 1.3.2 of LibTMCG
* [2017-08-23] DKG-tools: added FIPS 186-4 compliance for dkg-gencrs
* [2017-08-20] RBC: implements a synchonization mechanism in Sync()
* [2017-08-17] RBC: important bugfixes in Deliver() and DeliverFrom()
* [2017-08-09] DKG-tools: added built-in TCP/IP message exchange (option "-H")
* [2017-08-09] added configure feature --disable-dkgtools
* [2017-08-07] DKG-tools: added option "-P" for setting aiounicast passwords