@@ -32,15 +32,15 @@
 
 	// get content of mpz_t into gcry_mpi_t
 	bool mpz_get_gcry_mpi
-		(gcry_mpi_t *out, mpz_srcptr value);
+		(gcry_mpi_t &out, mpz_srcptr value);
 
 	// set content of mpz_t from gcry_mpi_t
 	bool mpz_set_gcry_mpi
-		(gcry_mpi_t in, mpz_ptr value);
+		(const gcry_mpi_t in, mpz_ptr value);
 
 	// get small values from gcry_mpi_t
 	size_t get_gcry_mpi_ui
-		(gcry_mpi_t in);
+		(const gcry_mpi_t in);
 	
 	// iostream operators for mpz_t
 	std::ostream& operator <<
