@@ -8,6 +8,7 @@ in the sources of this package and additionally can be obtained from Internet
 <https://www.gnu.org/licenses>.
 
 * [2017-11-18] release 1.3.5 of LibTMCG
+* [2017-11-17] changed interfaces of mpz helper functions *gcry_mpi*
 * [2017-11-17] ASTC: fixes a bad mpz initialization in DSS::Sign()
 * [2017-11-17] VTMF: fixes a memory leak found by valgrind
 * [2017-11-16] RFC4880: fixes some memory leaks found by valgrind
